--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,6 @@
+
 <ion-view view-title="Dashboard">
+<input type="text" placeholder="Search">
   <ion-content class="padding">
     <h2>Welcome to Ionic</h2>
     <p>
