add secondary cards

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,10 +5,10 @@ navigation history that also transitions its views in and out.
 -->
 
 
-<ion-tabs class="tabs-top tabs-icon-top tabs-background-light tabs-color-royal">
+<ion-tabs class=" tabs-top tabs-icon-top tabs-background-light tabs-color-positive ">
 
   <!-- Dashboard Tab -->
-  <ion-tab  icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar-outline" href="#/tab/dash">
+  <ion-tab  icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar-outline  " href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
