--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,19 +1,53 @@
 
-<ion-view view-title="Dashboard">
-<input type="text" placeholder="Search">
-  <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
-    <p>
-    This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the <a href="http://market.ionic.io/starters" target="_blank">Ionic Market</a>.
+<ion-view view-title="Dashboard"  >
+
+  <ion-content class="padding " >
+
+  <div class="card" >
+
+    
+<!-- Whats Happens  -->
+  <label class="item item-input">
+     <div class="item-avatar item-icon-right"><img  ng-src="img/ben.png"> </div>
+    <input type="text" placeholder="¿Que estas pensando?">
+  </label>
+
+
+      <div class="item tabs tabs-secondary tabs-icon-left">
+      <a href="#" class="tab-item">
+        <i class="icon ion-edit"></i>
+        ESTADO</a>
+      <a href="#" class="tab-item">
+        <i class="icon ion-camera"></i>
+        FOTO</a>
+            <a href="#" class="tab-item">
+        <i class="icon ion-location"></i>
+        ESTOY AQUÍ</a>
     </p>
-    <p>
-      To edit the content of each tab, edit the corresponding template file in <code>www/templates/</code>. This template is <code>www/templates/tab-dash.html</code>
+  </div>
+
+  </div>
+
+<!-- Secondary Card  -->
+    <div class="card" >
+
+      <div class="item tabs tabs-secondary tabs-icon-left">
+      <a href="#" class="tab-item">
+        <i class="icon ion-thumbsup"></i>
+        Me Gusta</a>
+      <a href="#" class="tab-item">
+        <i class="icon ion-chatbox"></i>
+        Comentar</a>
+            <a href="#" class="tab-item">
+        <i class="icon ion-forward"></i>
+        Compartir</a>
     </p>
-    <p>
-    If you need help with your app, join the Ionic Community on the <a href="http://forum.ionicframework.com" target="_blank">Ionic Forum</a>. Make sure to <a href="http://twitter.com/ionicframework" target="_blank">follow us</a> on Twitter to get important updates and announcements for Ionic developers.
-    </p>
-    <p>
-      For help sending push notifications, join the <a href="https://apps.ionic.io/signup" target="_blank">Ionic Platform</a> and check out <a href="http://docs.ionic.io/docs/push-overview" target="_blank">Ionic Push</a>. We also have other services available.
-    </p>
+  </div>
+
+  </div>
+
+
+
+
   </ion-content>
 </ion-view>
